[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoctk = { path = "../aoctk" }
indicatif = { version="0.17.7", features = ["rayon"] }
itertools = "0.12.0"
memoize = "0.4.1"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.*"
